--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title:            Hydeout
 tagline:          'A Jekyll theme'
 description:      'The <a href="http://hyde.getpoole.com" target="_blank">Hyde</a> theme for <a href="http://jekyllrb.com" target="_blank">Jekyll</a>, refreshed.'
 url:              https://fongandrew.github.io/hydeout
-baseurl:          # the optional subpath of your site, e.g. "/blog"
+baseurl:          ''# the optional subpath of your site, e.g. "/blog"
 
 author:
   name:           'Andrew Fong'
